--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "author": "Mayur Kamble",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.0",
         "concurrently": "^6.0.1",
@@ -31,6 +32,10 @@
         "mongoose": "^5.12.3",
         "multer": "^1.4.2",
         "nodemon": "^2.0.7",
+        "react-redux": "^7.2.3",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
         "shortid": "^2.2.16",
         "slugify": "^1.5.0"
     }
